<resources>
    <string name="app_name">DriveIt Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in_txt">Sign in</string>
    <string name="sign_up_prefix">"No account yet? "</string>
    <string name="sign_up_txt">Create one</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="error_invalid_phone_number">This phone number is incorrect</string>
    <string name="success_sign_up">Account is created Successfully</string>

    <string name="login_error">Invalid Username and Password</string>
    <string name="signup_error">Error during signup, please try later</string>
    <string name="try_error">Try later</string>
    <string name="enable_gps">Enable GPS</string>


    <string name="offline_msg">Are you sure to be offline?</string>
    <string name="offline_des_msg">You won\'t be available to receive delivery requests.</string>
    <string name="online_msg">Are you sure to continue online?</string>
    <string name="online_des_msg">You will be available to receive delivery requests.</string>
    <string name="dialog_msg">Are you sure?</string>
    <string name="yes_msg">Yes</string>
    <string name="no_msg">No</string>

    <string name="online_bttn_msg">Set me online</string>
    <string name="offline_bttn_msg">Set me offline</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="new_request_msg">You have a new ride request</string>
    <string name="ride_accepted_success">Ride Accepted</string>
    <string name="ride_accepted_error">Ride Acceptance error</string>
    <string name="ride_rejected_success">Ride Rejected</string>
    <string name="ride_rejected_error">Ride Rejection error</string>
    <string name="enable_phone_call">Enable phone call permission</string>
    <string name="tripComplete_error">Trip Complete error with server, try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="action_settings">Settings</string>

    <string name="GPS_disabled_warning_title">GPS is disabled</string>
    <string name="GPS_disabled_warning_msg">You must enable location access in order to proceed
        using the app.</string>
    <string name="ok_btn_dialog">Ok</string>

    <string name="notification_title_ride">Delivery request</string>
    <string name="notification_msg_ride">Client is waiting for you.</string>

    <string name="logout_error">To logout, You have to complete the current trip</string>
    <string name="account_not_active">Account is not active</string>
</resources>
